📦 Chore: deprecated 생성자 수정